# Mis-Procesos

SMS-FRONT/: .env.example  .gitignore  README.md  composer.json  package-lock.json  package.json
SMS-FRONT/app/: helpers.php
SMS-FRONT/app/Events/: BalanceUpdated.php  CampaignCompleted.php  CampaignProgress.php  TestSmsSent.php
SMS-FRONT/app/Jobs/: AutoRechargeJob.php
SMS-FRONT/app/Models/: AppSetting.php  Campaign.php  CampaignRecipient.php  CampaignSendType.php  CampaignStatus.php  Company.php  CompanyCreditTransaction.php  RecipientSendStatus.php  StripePaymentEvent.php  TestSmsSend.php  User.php
SMS-FRONT/app/Providers/: AppServiceProvider.php
SMS-FRONT/app/Repositories/: CampaignRepository.php
SMS-FRONT/app/Services/: CampaignService.php  CompanyCreditService.php  PayPalService.php  StripeService.php
SMS-FRONT/app/Traits/: BelongsToCompany.php
SMS-FRONT/bootstrap/: app.php
SMS-FRONT/config/: app.php  paypal.php  stripe.php
SMS-FRONT/database/seeders/: AdminUserSeeder.php  (+5 more)
SMS-FRONT/docs/: api-webhooks-python.md
SMS-FRONT/lang/: es.json
SMS-FRONT/routes/: api.php  channels.php  console.php  web.php
sms-sender/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
sms-sender/config/: settings.py
sms-sender/core/: campaign_processor.py  worker.py
sms-sender/db/: connection.py  queries.py
sms-sender/notifier/: webhook.py
sms-sender/providers/: base.py  router.py
sms-sender/providers/directo/: client.py
sms-sender/providers/japifone/: client.py
sms-sender/utils/: encoding.py  logger.py  no_send_rules.py
(+95 files in other folders)
