[project]
name = "sms-sender"
version = "0.1.0"
description = "High-throughput SMS campaign sender for SMS Intelix"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "pyodbc>=5.0,<6.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.scripts]
sms-sender = "main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
